RESOLVED FIXED130100
REGRESSION (r165356): [Mac] Multi-part key bindings don't work
https://bugs.webkit.org/show_bug.cgi?id=130100
Summary REGRESSION (r165356): [Mac] Multi-part key bindings don't work
Alexey Proskuryakov
Reported 2014-03-11 16:26:15 PDT
If you have this in ~/Library/KeyBindings/DefaultKeyBinding.dict, then pressing Ctrl+m Ctrl+x should insert Esc key glyph: { "^m" = { "^x" = ("insertText:", "\U238B"); /* C-x escape */ }; } This is broken because we now pass keyups through -interpretKeyEvents:, and interpreting that resets internal state of key bindings.
Attachments
proposed fix (2.29 KB, patch)
2014-03-11 22:38 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2014-03-11 22:38:40 PDT
Created attachment 226474 [details] proposed fix
Alexey Proskuryakov
Comment 2 2014-03-12 10:21:07 PDT
Committed <http://trac.webkit.org/r165477>. Also changed NO to false - I remembered that the argument was a C++ bool now.
Note You need to log in before you can comment on or make changes to this bug.