REGRESSION (r165356): [Mac] Multi-part key bindings don't work https://bugs.webkit.org/show_bug.cgi?id=130100

Reviewed by Darin Adler.

Restore the previous behavior, where we only interpreted keydowns (including those
coming through performKeyEquivalent).

In the future, we might send all events to input methods, but not to key bindings.

* UIProcess/API/mac/WKView.mm:
(-[WKView keyUp:]):
(-[WKView flagsChanged:]):



Canonical link: https://commits.webkit.org/148088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165477 268f45cc-cd09-0410-ab3c-d52691b4dbfc